--- a/index.html
+++ b/index.html
@@ -83,20 +83,46 @@
         <h2>Our Statistics</h2>
         <div id="number">
             <div>
-                <p>8</p>
+                <p class="data">8</p>
                 <p>Years of Experience</p>
             </div>
             <div>
-                <p>600</p>
+                <p class="data">600</p>
                 <p>Contest attended</p>
             </div>
             <div>
-                <p>300</p>
+                <p class="data">300</p>
                 <p>Happy Customer</p>
             </div>
             <div>
-                <p>30</p>
+                <p class="data">30</p>
                 <p>Camps</p>
+            </div>
+        </div>
+    </section>
+    <section id="services">
+        <div id="left">
+            <h2>Pet Services</h2>
+            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.</p>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabofdfd dsdsd.</p>
+        </div>
+
+        <div id="right">
+            <div>
+                <h3>Grooming</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div>
+                <h3>Dog Training</h3>
+                <p>nteger sit amet mattis quam, sit amet ultricies velit.</p>
+            </div>
+            <div>
+                <h3>Adoption</h3>
+                <p>nteger sit amet mattis quam, sit amet ultricies velit.</p>
+            </div>
+            <div>
+                <h3>Veterinary Care</h3>
+                <p>nteger sit amet mattis quam, sit amet ultricies velit.</p>
             </div>
         </div>
     </section>
