Add section OurBlog

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dog Page</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css">
 </head>
 <body>
     <header> 
@@ -108,21 +109,86 @@
         </div>
 
         <div id="right">
-            <div>
+            <div class="item">
+                <div><i class="fas fa-expand-alt"></i></div>
                 <h3>Grooming</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
-            <div>
+            <div class="item">
+                <div><i class="fab fa-github"></i></div>   
                 <h3>Dog Training</h3>
                 <p>nteger sit amet mattis quam, sit amet ultricies velit.</p>
             </div>
-            <div>
+            <div class="item">
+                <div><i class="far fa-heart"></i></div>
                 <h3>Adoption</h3>
                 <p>nteger sit amet mattis quam, sit amet ultricies velit.</p>
             </div>
-            <div>
+            <div class="item">
+                <div>
+                    <i class="fas fa-medkit"></i>
+                </div>
                 <h3>Veterinary Care</h3>
                 <p>nteger sit amet mattis quam, sit amet ultricies velit.</p>
+            </div>
+        </div>
+    </section>
+    <section id="testimonials">
+        <h2>Testimonials</h2>
+        <div id="testiBox">
+            <div class="item">
+                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Error veritatis sit nulla corporis sint enim earum quibusdam non laboriosam adipisci libero est in eum fugiat"</p>
+                <div><img src="./img/te1.jpg" alt="te1"></div>
+                <h3>- LOREM</h3>
+            </div>
+            <div class="item">
+                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Error veritatis sit nulla corporis sint enim earum quibusdam non laboriosam adipisci libero est in eum fugiat"</p>
+                <div><img src="./img/te2.jpg" alt="te2"></div>
+                <h3>- UNDE</h3>
+            </div>
+            <div class="item">
+                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Error veritatis sit nulla corporis sint enim earum quibusdam non laboriosam adipisci libero est in eum fugiat"</p>
+                <div><img src="./img/te3.jpg" alt="te3"></div>
+                <h3>- OMNIS</h3>
+            </div>
+        </div>
+    </section>
+    <section id="ourBlog">
+        <h2>Our Blog</h2>
+        <div class="ourBlog" >
+            <div class="blog-item">
+                <div class="top">
+                    <img src="./img/b1.jpg" alt="blog1">
+                </div>
+                <div class="bottom">
+                    <a href="#">At vero eos</a>
+                    <p>Cras ultricies ligula sed magna dictum porta auris blandita.</p>
+                    <a class="more" href="#">Read more</a>
+                </div>
+            </div>
+            <div class="blog-item">
+                <div class="top">
+                    <img src="./img/b2.jpg" alt="blog2">
+                </div>
+                <div class="bottom">
+                    <a href="#">Tccus et ius</a>
+                    <p>Cras ultricies ligula sed magna dictum porta auris blandita.</p>
+                    <a class="more" href="#">Read more</a>
+                </div>
+            </div>
+            <div class="blog-item">
+                <div class="item"> 
+                    <a class="itemTitle" href="#">Sed do eiusmod tempor auris incididunt ut.</a>
+                    <p class="itemDate">Feb 06 2019</p>
+                </div>
+                <div class="item">
+                    <a class="itemTitle" href="#">Labore et dolore magna aliqua ultricies ligula.</a>
+                    <p class="itemDate">Feb 07 2019</p>
+                </div>
+                <div class="item">
+                    <a class="itemTitle" href="#">Nemo enim aspernatur aut odit aut fugit fdsdsd.</a>
+                    <p class="itemDate">Feb 13 2019</p>
+                </div>
             </div>
         </div>
     </section>
